--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,6 +66,7 @@
     top: 0px;
     background: #f0f2f1;
     width: 100%;
+    z-index: 1;
   }
   .container-responsive{
     width: 100%;
@@ -89,7 +90,7 @@
     margin-bottom: 80px;
   }
   .button-container{
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     margin: 0%;
     width: 90%;
