--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ select {
   padding: 0px 10px;
   /* font-weight: 100; */
   font-size: 12px;
+  background-color: white;
 }
 
 .form-container-flex{
