--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ select {
 
 .progress-bar-responsive{
   position: relative;
-  width: 200px;
+  width: 90%;
   height: 1rem;
   background-color: white;
   margin: auto;
