--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ select {
   margin-top: 5px;
   padding: 0px 10px;
   /* font-weight: 100; */
-  font-size: 12px;
+  font-size: 16px;
   background-color: white;
 }
 
@@ -281,11 +281,12 @@ select {
 /*---------pep text---------*/
 
 .text-pep{
-  font-weight: 600;
+  color: #666;
+  font-size: 18px;
 }
 
 .input-radio-config{
-  margin-top: 12px;
+  margin-top: 16px;
   margin-bottom: 12px;
 }
 
