--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,15 @@ footer{
   font-weight: 500;
 }
 
+
+.button-confirm{
+  border: none;
+  color: white;
+  padding: 14px 0px;
+  border-radius: 8px;
+  font-weight: 500;
+}
+
 .link{
   height: 40px;
   color: white;
