Cambios al form-5 para pruebas

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ select {
 }
 
 .titulo-main {
-  background: red;
+  background: #cc0033;
   color: white;
   border-radius: 5px;
   padding: 2px 26px;
@@ -207,16 +207,16 @@ select {
   right: 0;
 }
 
-/* .form-1{
+.form-1{
   display: none;
-} */
+}
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5{
+.form-2, .form-3, .form-4{
   display: none;
 }
 
@@ -305,6 +305,39 @@ select {
 
 /*-----------form-5 cards-----------*/
 
+
+.navbar-fotos{
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 12px;
+}
+
+.seccion-fotos{
+  background-color: #f5f8fa;
+  padding: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  margin-left: 8px;
+}
+
+
+.seccion-activa{
+  background-color: #CC0033;
+  color: white;
+}
+
+.fotos-seccion1{
+  display: none;
+}
+
+.fotos-seccion3{
+  display: none;
+}
+
+.seccion-fotos:hover{
+  cursor: pointer;
+}
+
 .card{
   display: flex;
   align-items: center;
@@ -313,7 +346,7 @@ select {
   border-radius: 8px;
   box-shadow: 0 1px 8px rgb(22 22 22 / 10%);
   padding: 8px;
-  margin-top: 12px;
+  /* margin-top: 12px; */
 }
 
 .no-image{
@@ -511,3 +544,5 @@ footer{
 .link-disabled{
   pointer-events: none;
 }
+
+
