Se agrega un nuevo apartado para referencias. El form pasa a tener 6 partes

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ select {
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5{
+.form-2, .form-3, .form-4, .form-5, .form-6{
   display: none;
 }
 
