--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,27 @@ select {
   font-weight: 500;
 }
 
+.circular-button{
+  border: none;
+  color: white;
+  background-color: #CC0033;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  font-weight: 500;
+  font-size: 28px;
+}
+
+.circular-button-container{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.circular-button:hover{
+  cursor: pointer;
+}
+
 .button-container{
   width: 50%;
   margin-top: 28px;
@@ -207,16 +228,16 @@ select {
   right: 0;
 }
 
-/* .form-1{
+.form-1{
   display: none;
-} */
+}
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5, .form-6{
+.form-2, .form-3, .form-4, .form-6{
   display: none;
 }
 
