Se agrega la funcion de desplegar nuevos campos en el form relacionado a las pep's

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ select {
   border-radius: 50%;
   font-weight: 500;
   font-size: 28px;
+  display: none;
 }
 
 .circular-button-container{
@@ -228,16 +229,16 @@ select {
   right: 0;
 }
 
-.form-1{
+/* .form-1{
   display: none;
-}
+} */
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-6{
+.form-2, .form-3, .form-4, .form-5, .form-6{
   display: none;
 }
 
