--- a/css/style.css
+++ b/css/style.css
@@ -231,16 +231,16 @@ select {
   right: 0;
 }
 
-/* .form-1{
+.form-1{
   display: none;
-} */
+}
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5, .form-6{
+.form-2, .form-3, .form-4, .form-5{
   display: none;
 }
 
@@ -616,4 +616,48 @@ footer{
 
 .calle {
   width: 49%;
+}
+
+
+
+/*--------------------Drag and drop------------------------------*/
+
+.drop-area{
+  border: 2px dashed #CC0033;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.drop-area.active{
+  background-color: rgba(204, 0, 51, 0.2);
+}
+
+.drop-area button{
+  padding: 10px 25px;
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #CC0033;
+  margin-top: 12px;
+  border-radius: 8px;
+}
+
+
+.drop-area button:hover{
+  cursor: pointer;
+}
+
+
+.file-container{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: solid 1px #a1a5b7;
 }
