Se agregan las funciones a los botones de voler para elegir el tipo de cliente

--- a/css/style.css
+++ b/css/style.css
@@ -674,5 +674,14 @@ footer{
 
 .button-red{
   background-color: #cc0033;
-  font-size: 16px;
+  border: none;
+  color: white;
+  padding: 14px 20px;
+  border-radius: 8px;
+  font-weight: 500;
+}
+
+
+.button-red:hover{
+  cursor: pointer;
 }
