--- a/css/style.css
+++ b/css/style.css
@@ -231,16 +231,16 @@ select {
   right: 0;
 }
 
-.form-1{
+/* .form-1{
   display: none;
-}
+} */
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5{
+.form-2, .form-3, .form-4, .form-5, .form-6{
   display: none;
 }
 
