Se agrega un contenedor al boton de volver en el formulario-6

--- a/css/style.css
+++ b/css/style.css
@@ -685,3 +685,11 @@ footer{
 .button-red:hover{
   cursor: pointer;
 }
+
+
+.asalariado-volver-contenedor, .comerciante-volver-contenedor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+}
