--- a/css/style.css
+++ b/css/style.css
@@ -245,16 +245,16 @@ select {
   right: 0;
 }
 
-/* .form-1{
+.form-1{
   display: none;
-} */
+}
 
 .confirm-container{
   display: none;
   /* margin-bottom: 80px; */
 }
 
-.form-2, .form-3, .form-4, .form-5, .form-6{
+.form-2, .form-3, .form-4, .form-5{
   display: none;
 }
 
@@ -707,4 +707,50 @@ footer{
   display: flex;
   justify-content: center;
   margin-top: 8px;
+}
+
+
+.parrafo{
+  width: 60%;
+  text-align: center;
+  margin: auto;
+}
+
+
+.container-clickable{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+  margin: 12px 0;
+  border-radius: 12px;
+  border: 2px dashed #CC0033;
+}
+
+.clickable-option{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.button-add{
+  border-radius: 50%;
+  border: none;
+  font-size: 28px;
+  color: white;
+  background-color: #CC0033;
+  height: 40px;
+  width: 40px;
+}
+
+.red-text{
+  color: #CC0033;
+}
+
+
+.red-text, .button-add:hover{
+  cursor: pointer;
 }
