--- a/css/style.css
+++ b/css/style.css
@@ -768,3 +768,16 @@ footer{
   height: 150px;
   border-radius: 50%;
 }
+
+.container-img-nombre{
+  display: flex;
+}
+
+.button-camera{
+  width: 30%;
+}
+
+.foto-descripcion{
+  height: 43px;
+  width: 70%;
+}
