Cambios en los archivos subidos

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ html{
 input[ type=number ]::-webkit-inner-spin-button,
 input[ type=number ]::-webkit-outer-spin-button{
   -webkit-appearance: none;
+  appearance: none;
 }
 
 /* select{
