Se agrega un width a las imagenes de las cedulas y la selfie

--- a/css/style.css
+++ b/css/style.css
@@ -777,3 +777,7 @@ footer{
 .foto-descripcion{
   width: 70%;
 }
+
+.foto-frontal-confirm, .foto-trasera-confirm, .selfie-confirm{
+  width: 70%;
+}
