Se corrigen errores al mostrar la informacion al final

--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,6 @@ footer{
   width: 70%;
 }
 
-.foto-frontal-confirm, .foto-trasera-confirm, .selfie-confirm{
+.foto-frontal-confirm, .foto-trasera-confirm, .selfie-confirm, .domicilio{
   width: 70%;
 }
