--- a/css/style.css
+++ b/css/style.css
@@ -781,3 +781,37 @@ footer{
 .foto-frontal-confirm, .foto-trasera-confirm, .selfie-confirm, .domicilio{
   width: 70%;
 }
+
+
+.modal{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #111111bd;
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 10;
+}
+
+.modal--show{
+  opacity: 1;
+  pointer-events: unset;
+}
+
+
+.modal__container{
+  margin: auto;
+  width: 90%;
+  background-color: white;
+  max-height: 90%;
+  max-width: 800px;
+  border-radius: 6px;
+  padding: 6em 2.5em;
+  display: grid;
+  gap: 1em;
+  place-items: center;
+  grid-auto-columns: 100%;
+}
