Las camaras se activan con un evento de click

--- a/css/style.css
+++ b/css/style.css
@@ -774,7 +774,15 @@ footer{
   width: 30%;
 }
 
+.button-camera-pc{
+  width: 30%;
+}
+
 .foto-descripcion{
+  width: 70%;
+}
+
+.foto-descripcion-pc{
   width: 70%;
 }
 
