--- a/css/style.css
+++ b/css/style.css
@@ -417,8 +417,9 @@ select {
 /*---------lienzos-----------*/
 .lienzo{
   display: none;
-  width: 80px;
-  height: 80px;
+  width: 400px;
+  height: 300px;
+  border-radius: 8px;
 }
 
 .text-card{
