--- a/css/style.css
+++ b/css/style.css
@@ -442,8 +442,16 @@ select {
 }
 
 /*-------Loader------------*/
-.loader{
+.loader-container{
   display: none;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.loader{
   width: 40px;
   height: 40px;
   border: #CC0033 solid 4px;
@@ -548,6 +556,13 @@ select {
 
 .datos-confirmados{
   display: none;
+}
+
+.datos-no-confirmados{
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
 }
 
 .card-confirm{
@@ -682,6 +697,10 @@ footer{
 
 .lista-boletas{
   display: none;
+}
+
+.lista-item-documentos{
+  margin-left: 3%;
 }
 
 
@@ -861,4 +880,10 @@ footer{
 
 .material-symbols-outlined:hover{
   cursor: pointer;
+}
+
+
+.volver-a-intentar{
+  max-width: 150px;
+  margin: auto;
 }
