se corrige un error en la validacion del input de referencia comercial

--- a/css/style.css
+++ b/css/style.css
@@ -647,9 +647,12 @@ footer{
 
 
 .calle {
-  width: 49%;
+  width: 54%;
 }
 
+.nro-edificio, .nro-casa{
+  width: 45%;
+}
 
 
 /*--------------------Drag and drop------------------------------*/
