--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,8 @@ select {
   color: white;
   border-radius: 5px;
   padding: 2px 26px;
-  margin-bottom: 28px;
-  margin-top: 28px;
+  margin-top: 30px;
+  margin-bottom: 16px;
 }
 
 .titulo-confirm{
@@ -889,4 +889,9 @@ footer{
 .volver-a-intentar{
   max-width: 150px;
   margin: auto;
+}
+
+
+.color-grey{
+  color: grey;
 }
